--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
 *:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
 html{font-size:10px;-webkit-tap-highlight-color:rgba(0,0,0,0)}
-body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:14px;line-height:1.42857143;color:#333;background-color:#fff;margin:0}
+body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:14px;line-height:1.42857143;color:#333;background-color:#fff;margin:0 0 50px}
 hr{margin-top:20px;margin-bottom:20px;border:0;border-top:1px solid #eee}
 h1,h2{font-family:inherit;font-weight:500;line-height:1.1;color:inherit;margin:10px 0}
 .text-center{text-align:center}
